--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@alloc/quick-lru": "^5.2.0",
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.9",
     "axios": "^1.7.4",
-    "cores": "^0.8.5",
+    "cores": "^0.8.0",
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
